--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,7 @@ body {
   max-width: 100vw;
   overflow-x: hidden;
   -webkit-tap-highlight-color: transparent;
-  height: fit-content;
+  height: 100vh;
 }
 
 * {
@@ -35,3 +35,26 @@ html {
   -moz-osx-font-smoothing: grayscale;
 }
 
+/* src/index.css أو src/components/UserProfile.css */
+
+/* Light Mode (الافتراضي) */
+body.light {
+  background-color: #f5f5f5;
+  color: #000;
+}
+
+/* Dark Mode */
+body.dark {
+  background-color: #1a1a1a;
+  color: #fff;
+}
+
+/* تنسيق الأيقونات في الـ Dark Mode */
+body.dark .svgIcon path {
+  fill: white; /* غير لون الأيقونات للأبيض في الـ Dark Mode */
+}
+
+/* تنسيق الـ navigation-card في الـ Dark Mode */
+body.dark .navigation-card {
+  background-color: #2a2a2a;
+}
