--- a/src/components/Auth/SignUp.css
+++ b/src/components/Auth/SignUp.css
@@ -26,7 +26,7 @@
     z-index: 5;
   }
 }
-/* select ,input  {
+select ,input  {
   -webkit-appearance: none;
   appearance: none;
   background-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' width='18' height='18' fill='gray'><path d='M7 10l5 5 5-5H7z'/></svg>");
@@ -51,5 +51,5 @@
   font-family: 'Inter', sans-serif;
   margin-top: 5px;
 
-} */
+}
 
