--- a/src/components/Auth/Auth.css
+++ b/src/components/Auth/Auth.css
@@ -19,6 +19,12 @@
 
 .sign-sec{
 height: 100vh;
+
+}
+.signphoto{
+  position: absolute;
+  width: 100%;
+  height: 100vh;
 }
 .container {
   background-color: rgb(2, 127, 165);
@@ -39,23 +45,21 @@ height: 100vh;
 }
 
 .container__form {
-  height: 100%;
-  position: absolute;
-  top: 0;
-  transition: all 1s ease-in-out;
-  color: #000000;
-  
+	height: 100%;
+	position: absolute;
+	top: 0;
+	transition: all 0.6s ease-in-out;
 }
 
 .container__overlay {
-  height: 100%;
-  left: 50%;
-  overflow: hidden;
-  position: absolute;
-  top: 0;
-  transition: transform .8s ease-in-out;
-  width: 50%;
-  z-index: 100;
+	height: 100%;
+	left: 50%;
+	overflow: hidden;
+	position: absolute;
+	top: 0;
+	transition: transform 0.6s ease-in-out;
+	width: 50%;
+	z-index: 100;
 }
 
 .container.right-panel-active .container__overlay {
@@ -63,18 +67,18 @@ height: 100vh;
 }
 
 .overlay {
-  background-color: var(--lightblue);
-  background: url("../assets/img.jpg");
-  background-attachment: fixed;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  height: 100%;
-  left: -100%;
-  position: relative;
-  transform: translateX(0);
-  transition: transform .8s ease-in-out;
-  width: 200%;
+	background-color: var(--lightblue);
+	background: url("img.jpg");
+	background-attachment: fixed;
+	background-position: center;
+	background-repeat: no-repeat;
+	background-size: cover;
+	height: 100%;
+	left: -100%;
+	position: relative;
+	transform: translateX(0);
+	transition: transform 0.6s ease-in-out;
+	width: 200%;
 }
 
 .container.right-panel-active .overlay {
@@ -82,34 +86,34 @@ height: 100vh;
 }
 
 .overlay__panel {
-  align-items: center;
-  display: flex;
-  flex-direction: column;
-  height: 100%;
-  justify-content: center;
-  position: absolute;
-  text-align: center;
-  top: 0;
-  transform: translateX(0);
-  transition: transform 1s ease-in-out;
-  width: 50%;
+	align-items: center;
+	display: flex;
+	flex-direction: column;
+	height: 100%;
+	justify-content: center;
+	position: absolute;
+	text-align: center;
+	top: 0;
+	transform: translateX(0);
+	transition: transform 0.6s ease-in-out;
+	width: 50%;
 }
 
 .overlay--left {
-  transform: translateX(-20%);
+	transform: translateX(-20%);
 }
 
 .container.right-panel-active .overlay--left {
-  transform: translateX(0);
+	transform: translateX(0);
 }
 
 .overlay--right {
-  right: 0;
-  transform: translateX(0);
+	right: 0;
+	transform: translateX(0);
 }
 
 .container.right-panel-active .overlay--right {
-  transform: translateX(20%);
+	transform: translateX(20%);
 }
 
 
@@ -139,13 +143,13 @@ height: 100vh;
 
 .form {
   background-color: var(--white);
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-  padding: 0 3rem;
-  height: 100%;
-  text-align: center;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	flex-direction: column;
+	padding: 0 3rem;
+	height: 100%;
+	text-align: center;
 }
 
 .form__title {
@@ -173,39 +177,3 @@ height: 100vh;
 }
 
 
-@media (max-width: 768px) {
-  .container {
-    height: auto;
-    max-width: 100%;
-  }
-
-  .container__form,
-  .container__overlay {
-    position: static;
-    width: 100%;
-    height: auto;
-  }
-
-  .container.right-panel-active .container--signin,
-  .container.right-panel-active .container--signup {
-    transform: none;
-  }
-
-  .overlay {
-    display: none; 
-  }
-
-  .form {
-    padding: 1.5rem;
-  }
-
-  .btn {
-    padding: 0.7rem 3rem;
-    font-size: 0.7rem;
-  }
-
-  .input {
-    padding: 0.7rem;
-    
-  }
-}
