--- a/src/components/Auth/SignUp.css
+++ b/src/components/Auth/SignUp.css
@@ -1,55 +1,92 @@
 /* src/components/Auth/SignUp.css */
 .container__form.container--signup {
   left: 0;
-  opacity: 0;
-  width: 50%;
-  z-index: 1;
+	opacity: 0;
+	width: 50%;
+	z-index: 1;
 }
+/* @keyframes show {
+	0%,
+	49.99% {
+		opacity: 0;
+		z-index: 1;
+	}
 
+	50%,
+	100% {
+		opacity: 1;
+		z-index: 5;
+	}
+} */
 .container.right-panel-active .container--signup {
-  animation: show 1s;
-  opacity: 1;
-  transform: translateX(100%);
-  z-index: 5;
-  transition: 1s;
+  animation: show 0.6s;
+	opacity: 1;
+	transform: translateX(100%);
+	z-index: 5;
 }
 
-@keyframes show {
-  0%,
-  49.99% {
-    opacity: 0;
-    z-index: 1;
-  }
-  50%,
-  100% {
-    opacity: 1;
-    z-index: 5;
-  }
+
+
+
+.input-container {
+  position: relative;
+  display: flex;
+  align-items: center;
+  width: 400px; /* نفس العرض بتاع الـ input */
+  margin-top: 5px; /* نفس المسافة العلوية */
 }
-select ,input  {
-  -webkit-appearance: none;
+
+/* تنسيق الأيقونة */
+.input-icon {
+  position: absolute;
+  left: 10px;
+  top: 50%;
+  transform: translateY(-50%);
+  color: #888;
+  font-size: 18px;
+  z-index: 1; /* عشان الأيقونة تظهر فوق الـ input */
+}
+.input {
   appearance: none;
-  background-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' width='18' height='18' fill='gray'><path d='M7 10l5 5 5-5H7z'/></svg>");
-  background-repeat: no-repeat;
-  background-position: right 12px center;
-  background-size: 20px;
-  cursor: pointer;
-  width: 260px;
-  height: 75px;
-  padding: 8px 35px;
+   width: 400px;
+  height: 55px;
+  padding: 8px 35px; /* نفس الـ padding بتاع الـ input الأصلي مع مساحة للأيقونة */
   border: 1px solid #ccc;
   border-radius: 5px;
-  font-size: 16px;
-  white-space: normal !important;
-  word-wrap: break-word;
-  overflow-wrap: break-word;
-  display: block;
-  color: #000000;
   font-size: 14px;
   font-weight: 500;
   background-color: #ffffff;
   font-family: 'Inter', sans-serif;
   margin-top: 5px;
-
+  cursor: pointer;
+  white-space: normal !important;
+  word-wrap: break-word;
+  overflow-wrap: break-word;
+  display: block;
+  transition: border-color 0.3s ease-in-out;
 }
 
+
+.date-picker {
+  appearance: none;
+  width: 200px;
+  height: 55px;
+  padding: 8px 35px; /* نفس الـ padding مع مساحة للأيقونة */
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  font-size: 14px;
+  font-weight: 500;
+  background-color: #ffffff;
+  font-family: 'Inter', sans-serif;
+  margin-top: 5px;
+  cursor: pointer;
+  white-space: normal !important;
+  word-wrap: break-word;
+  overflow-wrap: break-word;
+  display: block;
+}
+
+.date-picker:focus {
+  outline: none;
+  border-color: #00c4b4;
+}
