--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,6 +1,6 @@
 
 .footer {
-    background: #f5f7fa;
+  background-color:var(--bg-color);
     padding: 2rem 0;
     border-top: 1px solid #b1cdda; 
     
@@ -37,7 +37,7 @@
   
   .footer-logo p {
     font-size: 1rem;
-    color: #333;
+    color: var(--LightDarktext-color);
     margin-bottom: 1rem;
   }
   
@@ -95,17 +95,19 @@
     color: #333;
     margin-bottom: 0rem;
     padding: 0;
+    color: var(--DarkyellowText-color);
   }
   
   .footer-column ul {
     list-style: none;
     padding: 0;
     line-height: 40px;
+    color: var(--DarkyellowText-color);
   }
   
   .footer-column li {
     font-size: 1rem;
-    color: #666;
+    color: var(--DarkyellowText-color);
     margin-bottom: 0.5rem;
     cursor: pointer;
   }
@@ -115,7 +117,7 @@
     gap: 15px;
     margin-top: 1rem;
     font-size: 24px;
-    color: #3c4042;
+    color: var(--DarkyellowText-color);
     cursor: pointer;
   }
   .social-icon:hover{
