--- a/src/pages/SelectedFlights/styles/sidebar.module.css
+++ b/src/pages/SelectedFlights/styles/sidebar.module.css
@@ -1,4 +1,12 @@
 /*--------global--------*/
+  /* --Btnbg-color: #0085FF;
+  --AuthBtn-color : #1a9ff1
+  --DarkyellowText-color: black;
+  --whiteyellowText-color: rgb(255, 255, 255);
+  --LightDarktext-color:  #333;
+  --LightText-color: white;
+  --DarkText-color: rgb(0, 0, 0);
+  --bg-color: white; */
 .side-bar {
   width: 328px;
   min-width: 214px;
@@ -8,6 +16,7 @@
   --header-icons-top: 23px;
   --header-icons-left: 13px;
   --sub-body-margin: 15px 20px 0 15px;
+  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
 }
 .side-bar h2 {
   font-size: 1.25rem; /*cards title (sort by and filters)*/
@@ -21,8 +30,10 @@ hr {
   right: 12px;
   width: 58px;
   height: 36px;
-  background-color: white;
+  background-color: var(--Btnbg-color);
+  color: var(--LightText-color);
   border: 0px;
+  
 }
 .reset:hover {
     background-color: #03a9f412;
@@ -40,6 +51,7 @@ hr {
   position: absolute;
   top: 2px;
   right: 0;
+  
 }
 /*---------Sort--------*/
 .side-bar .sort {
@@ -49,6 +61,7 @@ hr {
   border-radius: var(--card-border-radius);
   margin-bottom: 16px;
   padding-bottom: 10px;
+  color: var(--blackText-color);
 }
 .side-bar .sort::after {
   content: "";
@@ -62,14 +75,17 @@ hr {
 }
 .side-bar .sort h2 {
   margin: var(--card-title-margin);
+  color: var(--blackText-color);
 }
 .side-bar .price {
   margin: var(--sub-body-margin);
   position: relative;
+  color: var(--DarkyellowText-color);
 }
 .side-bar .price h3 {
   font-size: 1rem;
   margin-bottom: 10px;
+  color: var(--DarkyellowText-color);
 }
 .price-range-indicator-high {
   position: absolute;
@@ -78,11 +94,13 @@ hr {
 }
 .price-slider {
   width: 100%;
+  color: var(--DarkyellowText-color);
 }
 .priceValue {
   position: absolute;
   top: 5px;
   right: 150px;
+  color: var(--DarkyellowText-color);
 }
 /*---------filter--------*/
 .side-bar .filter {
@@ -90,9 +108,11 @@ hr {
   box-shadow: 0px 0px 1px 0px #171a1f12, 0px 0px 2px 0px #171a1f1f;
   border-radius: var(--card-border-radius);
   overflow: hidden;
+  color: var(--DarkyellowText-color);
 }
 .filter h2 {
   margin: var(--card-title-margin);
+  color: var(--blackText-color);
 }
 .filter::after {
   content: "";
@@ -109,15 +129,17 @@ hr {
 }
 .filter h3 {
   margin-bottom: 10px;
+  color:var() ;
 }
 .filter > div{
   padding-bottom: 10px;
   position: relative;
 }
 .filter .stops label+label {
-  opacity: 0.5;
+
   position: absolute;
   right: 0;
+  
 }
 .filter .flight-slider {
   width: 100%;
