--- a/src/pages/SelectedFlights/styles/container.module.css
+++ b/src/pages/SelectedFlights/styles/container.module.css
@@ -4,4 +4,6 @@
     justify-content: center;
     margin-top: 150px;
     gap: 25px;
+    font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif !important; 
+  font-weight: 500;
   }
