--- a/src/pages/SelectedFlights/styles/customPriceCalender.module.css
+++ b/src/pages/SelectedFlights/styles/customPriceCalender.module.css
@@ -1,11 +1,12 @@
 .flight-calendar {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-    max-width: 650px;
+      max-width: 650px;
     margin: 20px auto;
     border: 1px solid #e1e1e1;
     border-radius: 12px;
     overflow: hidden;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif !important; 
+  font-weight: 500;
     
   }
 
