--- a/src/pages/SelectedFlights/styles/mainHeader.module.css
+++ b/src/pages/SelectedFlights/styles/mainHeader.module.css
@@ -3,7 +3,8 @@
   --border-radius-select: 18px;
   --height-select: 36px;
   font-size: 0.875rem;
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif !important; 
+  font-weight: 500;
 }
 .main-header-container select {
   display: inline-block;
@@ -218,6 +219,10 @@ background-color: #1a9ff1;
   position: relative;
   padding-bottom: 50px;
   color:var(--blackText-color);
+  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif !important; 
+  font-weight: 500;
+  
+  
 }
 .flight {
   display: grid;
