--- a/src/pages/SelectedFlights/styles/sidebar.module.css
+++ b/src/pages/SelectedFlights/styles/sidebar.module.css
@@ -16,7 +16,8 @@
   --header-icons-top: 23px;
   --header-icons-left: 13px;
   --sub-body-margin: 15px 20px 0 15px;
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif !important; 
+  font-weight: 500;
 }
 .side-bar h2 {
   font-size: 1.25rem; /*cards title (sort by and filters)*/
@@ -94,7 +95,7 @@ hr {
 }
 .price-slider {
   width: 100%;
-  color: var(--DarkyellowText-color);
+  
 }
 .priceValue {
   position: absolute;
@@ -123,9 +124,11 @@ hr {
   left: var(--header-icons-left);
   width: 16px;
   height: 16px;
+  
 }
 .stops, .air-lines,.flight-duration {
     margin:var(--sub-body-margin);
+    
 }
 .filter h3 {
   margin-bottom: 10px;
@@ -134,6 +137,7 @@ hr {
 .filter > div{
   padding-bottom: 10px;
   position: relative;
+  
 }
 .filter .stops label+label {
 
@@ -143,11 +147,13 @@ hr {
 }
 .filter .flight-slider {
   width: 100%;
+ 
 }
 .flight-range-indicator-high {
   position: absolute;
   right: 0;
   bottom: 10px;
+  
 }
 .flightRangeValue {
   position: absolute;
