--- a/src/components/Auth/Auth.css
+++ b/src/components/Auth/Auth.css
@@ -11,7 +11,7 @@
 
   /* SIZES */
   --max-width: 1200px;
-  --max-height: 750px;
+  
 
   font-size: 16px;
   
@@ -31,7 +31,7 @@ height: 100vh;
   border-radius: var(--button-radius);
   box-shadow: 0 0.9rem 1.7rem rgba(0, 0, 0, 0.25),
     0 0.7rem 0.7rem rgba(0, 0, 0, 0.22);
-  height: var(--max-height);
+  height: 800px;
   max-width: var(--max-width);
   overflow: hidden;
   position: absolute;
