Darkmode-update-fix verifyEmail

--- a/src/pages/SelectedFlights/styles/container.module.css
+++ b/src/pages/SelectedFlights/styles/container.module.css
@@ -1,4 +1,7 @@
 
+* {
+  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+}
   .container {
     display: flex;
     justify-content: center;
