--- a/src/components/Auth/VerifyEmail.css
+++ b/src/components/Auth/VerifyEmail.css
@@ -14,7 +14,13 @@
 
   font-size: 16px;
 }
-
+/* --Btnbg-color: #0085FF;
+  --AuthBtn-color : #1a9ff1 ;
+  --DarkyellowText-color: black;
+  --whiteyellowText-color: rgb(255, 255, 255);
+  --LightDarktext-color:  #333;
+  --LightText-color: white;
+  --blackText-color: rgb(0, 0, 0); */
 .verify-sec {
   height: 100vh;
   display: flex;
@@ -22,18 +28,29 @@
   align-items: center;
   background-color: #f5f5f5;
 }
+.signphoto{
+  position: absolute;
+  width: 100%;
+  height: 100vh;
+}
 
 .verify-container {
-  background-color: rgb(2, 127, 165);
+  background-color: rgb(4, 100, 129);
   border-radius: var(--button-radius);
   box-shadow: 0 0.9rem 1.7rem rgba(0, 0, 0, 0.25),
     0 0.7rem 0.7rem rgba(0, 0, 0, 0.22);
-  height: var(--max-height);
+  height: 800px;
   max-width: var(--max-width);
   overflow: hidden;
-  position: relative;
+  position: absolute;
+  top: 55%;
+  left: 50%;
+  transform: translate(-50%,-50%);
   width: 100%;
   display: flex;
+}
+body.dark .verify-container {
+  background-color: #222127;
 }
 
 .verify-container__form {
@@ -42,7 +59,8 @@
   position: absolute;
   top: 0;
   left: 0;
-  color: #000000;
+  color: var(--DarkyellowText-color);
+  background-color: var(--Darktext-color);
 }
 
 .verify-container__overlay {
@@ -53,6 +71,7 @@
   top: 0;
   width: 50%;
   z-index: 100;
+  
 }
 
 .verify-overlay {
@@ -80,15 +99,17 @@
   top: 0;
   transform: translateX(0);
   width: 50%;
+  
 }
 
 .verify-overlay--right {
   right: 0;
   transform: translateX(0);
+  
 }
 
 .verify-btn {
-  background-color: var(--blue);
+  background-color: var(--Btnbg-color);
   background-image: linear-gradient(90deg, var(--blue) 0%, var(--lightblue) 74%);
   border-radius: 20px;
   border: 1px solid var(--blue);
@@ -102,6 +123,12 @@
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   margin-top: 5px;
 }
+body.dark .verify-btn {
+  background-color: #fbd684;
+  background-image: linear-gradient(90deg, var(--AuthBtn-color) 0%, var(--AuthBtn-color) 74%);
+  border: 1px solid #fbd684;
+  color: #000000;
+}
 
 .verify-btn:active {
   transform: scale(0.95);
@@ -112,7 +139,8 @@
 }
 
 .verify-form {
-  background-color: var(--white);
+  color: var(--LightDarktext-color);
+  background-color:#e9e9e9;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -121,11 +149,15 @@
   height: 100%;
   text-align: center;
 }
+body.dark .verify-form {
+    background-color: #2a2a2a;
+}
 
 .verify-form__title {
   font-weight: 300;
   margin: 0;
   margin-bottom: 1.25rem;
+  color: var(--DarkyellowText-color);
 }
 
 .verify-input {
@@ -136,6 +168,7 @@
   width: 100%;
   color: #000000;
   font-size: 16px;
+  font-weight: 600;
   border-bottom: 1px solid #ccc;
 }
 
@@ -151,43 +184,18 @@
 }
 
 .verify-auth-link {
-  color: var(--gray);
+  color: var(--LightDarktext-color);
   font-size: 0.9rem;
   margin: 1.5rem 0;
 }
 
 .verify-auth-link a {
-  color: var(--blue);
+  color: var(--Btnbg-color);
   text-decoration: none;
 }
 
-@media (max-width: 768px) {
-  .verify-container {
-    height: auto;
-    max-width: 100%;
-  }
-
-  .verify-container__form,
-  .verify-container__overlay {
-    position: static;
-    width: 100%;
-    height: auto;
-  }
-
-  .verify-overlay {
-    display: none;
-  }
-
-  .verify-form {
-    padding: 1.5rem;
-  }
-
-  .verify-btn {
-    padding: 0.7rem 3rem;
-    font-size: 0.7rem;
-  }
-
-  .verify-input {
-    padding: 0.7rem;
-  }
+body.dark .verify-input {
+    background-color: #333;
+    color: #fff;
+    border: none;
 }
